working version of A7 - GUI implemented